[gd_scene load_steps=14 format=3 uid="uid://636pxni4vlrd"]

[ext_resource type="PackedScene" uid="uid://dgoalvr1u3n5c" path="res://scenes/kill_zone.tscn" id="1_vhjor"]
[ext_resource type="PackedScene" uid="uid://b0ey48pi66kyk" path="res://mult_player.tscn" id="2_1vm1x"]
[ext_resource type="Script" path="res://scripts/camera_2d.gd" id="2_q6g3y"]
[ext_resource type="PackedScene" uid="uid://bqwjgydso5cn7" path="res://scenes/Players/player1.tscn" id="3_wpjwg"]
[ext_resource type="Script" path="res://scripts/Players/base_player.gd" id="4_6o0qy"]
[ext_resource type="PackedScene" uid="uid://dhw5ci1fgl5gj" path="res://scenes/Players/player_2.tscn" id="5_6ug13"]
[ext_resource type="Script" path="res://scripts/player_2.gd" id="6_hj8nv"]
[ext_resource type="Script" path="res://scripts/Players/player_1.gd" id="6_lau26"]
[ext_resource type="PackedScene" uid="uid://jt37txn30o4o" path="res://scenes/Players/player_3.tscn" id="7_o0gdt"]
[ext_resource type="Script" path="res://scripts/player_3.gd" id="8_pd2bi"]
[ext_resource type="PackedScene" uid="uid://b7i01c5bmo174" path="res://scenes/base_player.tscn" id="8_wdhln"]
[ext_resource type="PackedScene" uid="uid://bcr32ln6l4the" path="res://scenes/camera_movement.tscn" id="9_plef4"]

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_8pxiv"]

[node name="Level Template" type="Node"]

[node name="Base_Player" parent="." instance=ExtResource("8_wdhln")]

[node name="MultPlayer" parent="Base_Player" instance=ExtResource("2_1vm1x")]
visible = true

[node name="Player1" parent="Base_Player" instance=ExtResource("3_wpjwg")]
visible = false
z_index = 99
texture_filter = 1
position = Vector2(-7, 0.25)
scale = Vector2(3, 3)
collision_layer = 6
wall_min_slide_angle = 0.0
script = ExtResource("6_lau26")

[node name="Player_2" parent="Base_Player" instance=ExtResource("5_6ug13")]
visible = false
texture_filter = 1
position = Vector2(-7, 0.25)
scale = Vector2(3, 3)
collision_layer = 6
script = ExtResource("6_hj8nv")

[node name="player3" parent="Base_Player" instance=ExtResource("7_o0gdt")]
visible = false
texture_filter = 1
position = Vector2(-7, 0.25)
scale = Vector2(3, 3)
collision_layer = 6
script = ExtResource("8_pd2bi")

[node name="Camera Movement" parent="Base_Player" instance=ExtResource("9_plef4")]
script = ExtResource("4_6o0qy")

[node name="Camera2D" type="Camera2D" parent="Base_Player/Camera Movement"]
texture_filter = 1
texture_repeat = 2
position = Vector2(-1.04904e-05, 1.04308e-07)
scale = Vector2(3, 3)
zoom = Vector2(3, 3)
position_smoothing_enabled = true
position_smoothing_speed = 130.0
rotation_smoothing_enabled = true
script = ExtResource("2_q6g3y")

[node name="Left Kill Zone" parent="Base_Player/Camera Movement/Camera2D" instance=ExtResource("1_vhjor")]
texture_filter = 1
position = Vector2(-64.3333, 0.333332)
scale = Vector2(0.333333, 0.333333)
script = null

[node name="CollisionShape2D" type="CollisionShape2D" parent="Base_Player/Camera Movement/Camera2D/Left Kill Zone"]
texture_filter = 1
rotation = 1.5708
shape = SubResource("WorldBoundaryShape2D_8pxiv")

[node name="Right Kill Zone" parent="Base_Player/Camera Movement/Camera2D" instance=ExtResource("1_vhjor")]
texture_filter = 1
position = Vector2(64, 0.111111)
scale = Vector2(0.111111, 0.111111)
script = null

[node name="CollisionShape2D" type="CollisionShape2D" parent="Base_Player/Camera Movement/Camera2D/Right Kill Zone"]
texture_filter = 1
rotation = 4.71239
shape = SubResource("WorldBoundaryShape2D_8pxiv")

[node name="Kill Zones" type="Node" parent="."]

[node name="Bottom Kill Zone" parent="Kill Zones" instance=ExtResource("1_vhjor")]
texture_filter = 1
position = Vector2(0, 275)
script = null

[node name="CollisionShape2D" type="CollisionShape2D" parent="Kill Zones/Bottom Kill Zone"]
texture_filter = 1
shape = SubResource("WorldBoundaryShape2D_8pxiv")

[node name="Top Kill Zone" parent="Kill Zones" instance=ExtResource("1_vhjor")]
texture_filter = 1
position = Vector2(-1.58946e-07, -241)
scale = Vector2(0.333333, 0.333333)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Kill Zones/Top Kill Zone"]
texture_filter = 1
rotation = 3.14159
shape = SubResource("WorldBoundaryShape2D_8pxiv")

[connection signal="body_shape_entered" from="Kill Zones/Bottom Kill Zone" to="Kill Zones/Bottom Kill Zone" method="_on_body_shape_entered"]
